# Gulugulu

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  README.md  start.bat  stop.bat
.agents/skills/gulugulu-avatar-imagegen/: SKILL.md
.claude/: launch.json
.github/workflows/: release.yml
arts/concepts/: pet_duck_character.md
assets/ops/: README.md
assets/ops/discord/: profile.md
assets/ops/email/: signature.md
assets/ops/hackernews/: profile.md
assets/ops/producthunt/: profile.md
assets/ops/reddit/: profile.md
assets/ops/x/: profile.md
assets/ops/youtube/: profile.md
assets/species_review/ai_opus_authored/: 01_溪桨獭.json  02_暮羽枭.json  03_焰吻鳄.json
assets/studio/: LOGO_彩色.psd  LOGO_横_浅色.psd  LOGO_横_深色.psd  LOGO_浅色.psd  LOGO_深色.psd  Mobi_LOGO_浅色.ai
claude/: .claudeignore  CLAUDE.md  MEMORY.md
claude/memory/: character-design.md  dev-guidelines.md  product-requirements.md  project-basics.md  tech-architecture.md  tool-config.md
codex/: README.md  project-memory.md  worklog.md
config/: project.json
docs/: project-plan.md
docs/gdd/: CoreGameplay.md  CoreLoop.md  EconomyScaling.md  FusionRecipeSlots.md  FusionSystem.md  InteractionEconomy.md  OnboardingCoach.md  OnboardingFlow.md  OnboardingGuidance.md  PokedexSystem.md  SkinWorkshop.md  SpeciesArtSpec.md  SpeciesMatrix.md  SteamAchievements.md  SteamCloudSync.md
docs/history/: 核心玩法设计.md
docs/ops/: 00-strategy.md  01-phase1-launch.md  02-automation.md  README.md
plans/: coregameplay-mvp-plan.md  coregameplay-mvp-progress.md
plans/custom_rig/: 00-spec.md
plans/fusion_species/: 00-overview.md  01-progress.md
plans/steam_trade/: 00-decisions.md  01-app-setup.md  02-rust-core.md  03-itemdefs.md  04-testing.md  05-release.md  06-store-page.md  07-cloud-save.md  README.md
progress/: 挂机的特性.md
projects/config/: README.md  avatar-providers.example.json
projects/gulugulu-app/: .gitignore  index.html  package-lock.json  package.json  trailer.html  vite.config.ts  vite.trailer.config.ts
projects/gulugulu-app/scripts/: _showcase_render.tsx  build_showcase.mjs  capture_store_shots.mjs  capture_trailer.mjs  check_species_assets.ts  gen_species_config.mjs  gen_wordmark.tsx  generate_guluduck_animations.py  render_achievement_icons.mjs  render_chimera.tsx  render_contact_sheet.tsx  render_customrig.tsx  render_eggs.tsx  render_gallery.tsx  render_grid.tsx  render_ops_assets.tsx  render_spec.tsx  render_species_previews.tsx  render_sprites.tsx  render_steam_icons.tsx  render_store_assets.tsx  render_video.mjs  render_workfx_check.tsx  (+9 more)
projects/gulugulu-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
projects/gulugulu-app/src-tauri/capabilities/: default.json
projects/gulugulu-app/src-tauri/icons/: icon.icns
projects/gulugulu-app/src-tauri/src/: agent_conn.rs  avatar_manager.rs  cli_spawn.rs  codex_adapter.rs  fusion_gen.rs  fusion_slots.rs  game.rs  game_config.rs  key_watcher.rs  lib.rs  main.rs  quote_gen.rs  settings.rs  skins.rs  steam.rs  steam_autostart.rs  steam_cloud.rs  steam_inventory.rs  steam_market.rs  steam_smoke.rs  steam_sync.rs  steam_workshop.rs  tray.rs  window_tracker.rs
projects/gulugulu-app/src-tauri/src/game/: achievements.rs  commands.rs  debug.rs  mod.rs  model.rs  persist.rs  state.rs  tests.rs
projects/gulugulu-app/src-tauri/src/game/logic/: economy.rs  energy.rs  facility.rs  fusion.rs  mod.rs  progression.rs  skins.rs
scripts/: capture_desktop_hero.ps1  install.ps1  install.sh  make_review_sheet.ps1
scripts/debug/: preview-animations.bat
scripts/steam/: assign_fixed_defs.mjs  build_itemdefs_core.mjs  generate_itemdefs.mjs
specification/: code-style.md  product-brief.md
(+226 files in other folders)
