[package]
name = "gulugulu"
version = "0.1.0"
description = "A desktop pet companion for Codex activity"
authors = ["Gulugulu"]
edition = "2021"

[lib]
name = "gulugulu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.4"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls"], default-features = false }
zip = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
