[package]
name = "gulugulu"
version = "0.1.0"
description = "A desktop pet companion for Codex activity"
authors = ["Gulugulu"]
edition = "2021"

[lib]
name = "gulugulu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tauri = { version = "2.11.2", features = [ "tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.4"
# 开机自动启动（设置面板开关 + 首融引导弹窗）：跨平台写 HKCU Run / LaunchAgent /
# .desktop。仅在 Rust 侧命令中调用其 ManagerExt，不暴露 JS API（无需能力配置）。
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls"], default-features = false }
zip = "2"
# Steam 集成（plans/steam_trade/02-rust-core.md）。高层 crate 无 Inventory 模块，
# 库存走 steamworks-sys 原生绑定（steam_inventory.rs 薄封装；版本必须与
# steamworks 内部依赖一致）。
steamworks = "0.13"
steamworks-sys = "0.13"
# 前端渲染的物种设定图 PNG（base64 经 IPC）→ 创意工坊 SetItemPreview 缩略图。
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
# Win32_UI_Input_KeyboardAndMouse + Win32_System_Threading 供 key_watcher.rs 的
# WH_KEYBOARD_LL 低级键盘钩子（键盘充能，InteractionEconomy.md §5）。
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading"] }
# 开机自启的 Steam 伴随项（steam_autostart.rs）：读 Valve\Steam 定位 steam.exe、
# 增删自有 HKCU\...\Run 值。版本对齐已锁定的传递依赖，无新增下载。
winreg = "0.55"
